working good for logging required without guard

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,3 +1,8 @@
 <p>public works!</p>
 <br>
-<p> {{kcSec.profile?.username}}</p>
+<p > {{kcSec.profile?.username}}</p>
+
+<button (click)="logout()">logout</button>
+<!--<ng-template #unauthenticated>
+  <p> im unauthentcated</p>
+</ng-template>-->
