map attributed to token and exract it to display on ui

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,6 +1,8 @@
 <p>public works!</p>
 <br>
 <p > {{kcSec.profile?.username}}</p>
+<br>
+<p > {{kcSec.kcInstance.tokenParsed?.['matricule']}}</p>
 
 <button (click)="logout()">logout</button>
 <!--<ng-template #unauthenticated>
